--- a/src/text_ru_RU.properties
+++ b/src/text_ru_RU.properties
@@ -1,75 +1,77 @@
+# start
+start.label = Р’С‹Р±РµСЂРёС‚Рµ СЏР·С‹Рє
+
 # login
-enter.button = Привет
-login.label = Логин
-password.label = Пароль
-login.button = войти
-registration.label = Первый раз?
-registration.button = зарегистрироваться
+enter.button = РџСЂРёРІРµС‚
+login.label = Р›РѕРіРёРЅ
+password.label = РџР°СЂРѕР»СЊ
+login.button = РІРѕР№С‚Рё
+registration.button = Р·Р°СЂРµРіРёСЃС‚СЂРёСЂРѕРІР°С‚СЊСЃСЏ
 
 # registration
-loginReg.label = Введите логин
-password1.label = Введите пароль
-password2.label = Введите пароль ещё раз
+loginReg.label = Р’РІРµРґРёС‚Рµ Р»РѕРіРёРЅ
+password1.label = Р’РІРµРґРёС‚Рµ РїР°СЂРѕР»СЊ
+password2.label = Р’РІРµРґРёС‚Рµ РїР°СЂРѕР»СЊ РµС‰С‘ СЂР°Р·
 
 # menu
-menu.label = Выберите действие
-help.button = Помощь
-info.button= Информация
-head.button = Вывести первый
-removeHead.button = Вывести первый и удалить
-add.button = Добавить
-addMax.button = Добавить если максимум
-update.button = Изменить
-clear.button = Очистить
-filterLessThanAge.button = Фильтр по возрасту
-filterContainsName.button = Фильтра по имени
-sumOfAge.button = Сумма возрастов
-removeById.button = Удалить по ID
-dragonTable.button = Таблица Драконов
-visualisation.button = Визуализация
-goToMenu.button = Меню
+menu.label = Р’С‹Р±РµСЂРёС‚Рµ РєРѕРјР°РЅРґСѓ
+help.button = РџРѕРјРѕС‰СЊ
+info.button= РРЅС„РѕСЂРјР°С†РёСЏ
+head.button = Р’С‹РІРµСЃС‚Рё РїРµСЂРІС‹Р№
+removeHead.button = Р’С‹РІРµСЃС‚Рё РїРµСЂРІС‹Р№ Рё СѓРґР°Р»РёС‚СЊ
+add.button = Р”РѕР±Р°РІРёС‚СЊ
+addMax.button = Р”РѕР±Р°РІРёС‚СЊ РµСЃР»Рё РјР°РєСЃРёРјСѓРј
+update.button = РР·РјРµРЅРёС‚СЊ
+clear.button = РћС‡РёСЃС‚РёС‚СЊ
+filterLessThanAge.button = Р¤РёР»СЊС‚СЂ РїРѕ РІРѕР·СЂР°СЃС‚Сѓ
+filterContainsName.button = Р¤РёР»СЊС‚СЂР° РїРѕ РёРјРµРЅРё
+sumOfAge.button = РЎСѓРјРјР° РІРѕР·СЂР°СЃС‚РѕРІ
+removeById.button = РЈРґР°Р»РёС‚СЊ РїРѕ ID
+dragonTable.button = РўР°Р±Р»РёС†Р° Р”СЂР°РєРѕРЅРѕРІ
+visualisation.button = Р’РёР·СѓР°Р»РёР·Р°С†РёСЏ
+goToMenu.button = РњРµРЅСЋ
 
 # add/update
-dragon.label = Введите характеристики дракона
-location.label = Введите характеристики локации
-killer.label = Введите характеристики убийцы
-dragonUpdate.label = Измените характеристики дракона
-locationUpdate.label = Измените характеристики локации
-killerUpdate.label = Измените характеристики убийцы
+dragon.label = Р’РІРµРґРёС‚Рµ С…Р°СЂР°РєС‚РµСЂРёСЃС‚РёРєРё РґСЂР°РєРѕРЅР°
+location.label = Р’РІРµРґРёС‚Рµ С…Р°СЂР°РєС‚РµСЂРёСЃС‚РёРєРё Р»РѕРєР°С†РёРё
+killer.label = Р’РІРµРґРёС‚Рµ С…Р°СЂР°РєС‚РµСЂРёСЃС‚РёРєРё СѓР±РёР№С†С‹
+dragonUpdate.label = РР·РјРµРЅРёС‚Рµ С…Р°СЂР°РєС‚РµСЂРёСЃС‚РёРєРё РґСЂР°РєРѕРЅР°
+locationUpdate.label = РР·РјРµРЅРёС‚Рµ С…Р°СЂР°РєС‚РµСЂРёСЃС‚РёРєРё Р»РѕРєР°С†РёРё
+killerUpdate.label = РР·РјРµРЅРёС‚Рµ С…Р°СЂР°РєС‚РµСЂРёСЃС‚РёРєРё СѓР±РёР№С†С‹
 id.label = ID
-name.label = имя
-dragonAge.label = возраст
-dragonWeight.label = вес
-dragonType.label = тип
-x_coordinate.label = координата x
-y_coordinate.label = координата y
-dragonDescription.label = описание
+name.label = РёРјСЏ
+dragonAge.label = РІРѕР·СЂР°СЃС‚
+dragonWeight.label = РІРµСЃ
+dragonType.label = С‚РёРї
+xcoordinate.label = РєРѕРѕСЂРґРёРЅР°С‚Р° x
+ycoordinate.label = РєРѕРѕСЂРґРёРЅР°С‚Р° y
+dragonDescription.label = РѕРїРёСЃР°РЅРёРµ
 locationX.label = X
 locationY.label = Y
 locationZ.label = Z
-personHeight.label = рост
-personWeight.label = вес
-cancel.button = Отмена
+personHeight.label = СЂРѕСЃС‚
+personWeight.label = РІРµСЃ
+cancel.button = РћС‚РјРµРЅР°
 
 # remove by id
-remove.label = Введите ID дракона, чтобы удалить его
+remove.label = Р’РІРµРґРёС‚Рµ ID РґСЂР°РєРѕРЅР°, С‡С‚РѕР±С‹ СѓРґР°Р»РёС‚СЊ РµРіРѕ
 removeId.label = ID
-remove.button = Удалить
+remove.button = РЈРґР°Р»РёС‚СЊ
 
 # filter contains name
-filterContainsName.label = Введите имя дракона
-filterName.label = Имя
-filter.button = Фильтр
+filterContainsName.label = Р’РІРµРґРёС‚Рµ РёРјСЏ РґСЂР°РєРѕРЅР°
+filterName.label = РРјСЏ
+filter.button = Р¤РёР»СЊС‚СЂ
 
 # filter less than age
-filterLessThanAge.label = Введите возраст дракона
-filterAge.label = Возраст
+filterLessThanAge.label = Р’РІРµРґРёС‚Рµ РІРѕР·СЂР°СЃС‚ РґСЂР°РєРѕРЅР°
+filterAge.label = Р’РѕР·СЂР°СЃС‚
 
 # table
-table.label = Список драконов
-field.label = поле
-value.label = значение
-sort.button = Соритровать
+table.label = РЎРїРёСЃРѕРє РґСЂР°РєРѕРЅРѕРІ
+field.label = РїРѕР»Рµ
+value.label = Р·РЅР°С‡РµРЅРёРµ
+sort.button = РЎРѕСЂС‚РёСЂРѕРІР°С‚СЊ
 
 # visualisation
-visualisation.label = Визуализация
+visualisation.label = Р’РёР·СѓР°Р»РёР·Р°С†РёСЏ
